--- a/PortableVbox@GHome_RecordingsInterface/PortableVbox@Home_RecordingsInterface.csproj
+++ b/PortableVbox@GHome_RecordingsInterface/PortableVbox@Home_RecordingsInterface.csproj
@@ -34,6 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <ProjectReference Include="..\PortableInterfaceLibraryCommon\PortableInterfaceLibraryCommon.csproj">
+      <Project>{b0f1b536-687f-45d8-b5fb-17e34255c808}</Project>
+      <Name>PortableInterfaceLibraryCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RecordingsInterfaceLibraryAsync.cs" />
