fetch channel icons if the are available!

--- a/Store-Demo-App/Store Demo App.csproj
+++ b/Store-Demo-App/Store Demo App.csproj
@@ -141,6 +141,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\ChannelIcons\4seven.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
