--- a/Store-Demo-App/Store Demo App.csproj
+++ b/Store-Demo-App/Store Demo App.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="DataModel\SampleDataSource.cs" />
     <Compile Include="Data\DataModels\channels.cs" />
+    <Compile Include="Data\DataModels\programmes.cs" />
     <Compile Include="Data\DataSources\DatasourceForDeviceData.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="DirectoryPage.xaml.cs">
