added hubpage and montage graphic!

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\PortableVbox@GHome_RecordingsInterface\packages.config" />
   <repository path="..\PortableVbox@Home_GENERALInterface\packages.config" />
   <repository path="..\PortableVbox@Home_XMLTVInterface\packages.config" />
+  <repository path="..\Store-Demo-App\packages.config" />
   <repository path="..\UnitTests_ForWholeLibrary\packages.config" />
 </repositories>
