--- a/Store-Demo-App/Store Demo App.csproj
+++ b/Store-Demo-App/Store Demo App.csproj
@@ -113,6 +113,8 @@
     <Compile Include="Common\23pd\Convertors\stringToHumanizedStringConverter.cs" />
     <Compile Include="Common\23pd\MessageDialogShower.cs" />
     <Compile Include="Common\MediaPlayerExtensions.cs" />
+    <Compile Include="Common\ObservableDictionary.cs" />
+    <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="DataModel\SampleDataSource.cs" />
     <Compile Include="Data\DataModels\channel.cs" />
@@ -122,6 +124,9 @@
     <Compile Include="Data\Repository.cs" />
     <Compile Include="DirectoryPage.xaml.cs">
       <DependentUpon>DirectoryPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="HubPage.xaml.cs">
+      <DependentUpon>HubPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="libs\SQLite.cs" />
     <Compile Include="libs\SQLiteAsync.cs" />
@@ -2728,6 +2733,10 @@
     <Content Include="Assets\ChannelIcons\TV\_TV.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\channel_montage.png" />
+    <Content Include="Assets\channel_montage1.png" />
+    <Content Include="Assets\channel_montage1_blured.png" />
+    <Content Include="Assets\channel_montage1_greyscale.png" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
@@ -2748,6 +2757,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="DirectoryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="HubPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
